--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -679,6 +679,8 @@
       "ask_subscribe_allowed" : "Разрешить запросы на подписку",
       "ask_total_max" : "Не больше, чем",
       "avatar_max-size" : "Максимальный размер аватаров",
+      "blocked-by-users_view" : "Список пользователей, которые меня заблокировали, виден",
+      "blocked-users_view" : "Список заблокированных пользователей виден",
       "comment_deleted_lifetime" : "Стирать удалённые комментарии через",
       "comment_draft_lifetime" : "Стирать черновики комментариев через",
       "comment_max-size" : "Максимальный размер комментариев",
