--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -679,6 +679,8 @@
       "ask_subscribe_allowed" : "Дозволяти запити на підписку",
       "ask_total_max" : "Не більше, ніж",
       "avatar_max-size" : "Максимальний розмір аватарів",
+      "blocked-by-users_view" : "Список користувачів, які заблокували мене, видно",
+      "blocked-users_view" : "Список заблокованих користувачів видно",
       "comment_deleted_lifetime" : "Стирати видалені коментарі через",
       "comment_draft_lifetime" : "Стирати чернетки коментарів через",
       "comment_max-size" : "Максимальний розмір коментарів",
