--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -27,10 +27,10 @@
   "ask-node" : "Попросить {name}",
   "auto" : "Авто",
   "auto-hide-comments" : "Автоматически скрывать комментарии",
-  "avatar" : "Аватар",
-  "avatar-placeholder" : "Место для аватара",
-  "avatar-shape" : "Форма аватара",
-  "avatar-too-small" : "Размер картинки для аватара должен быть хотя бы 100x100 пикселов",
+  "avatar" : "Аватарка",
+  "avatar-placeholder" : "Место для аватарки",
+  "avatar-shape" : "Форма аватарки",
+  "avatar-too-small" : "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
   "back-to-list-complains" : "← Список жалоб",
   "banned-android-google-play" : "Запрещено к показу на Android (Google Play)",
@@ -47,7 +47,7 @@
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
-  "cannot-resolve-name " : "Не удалось разрешить имя:",
+  "cannot-resolve-name " : "Не удалось опознать имя:",
   "caption" : "Заголовок",
   "change" : "Изменить",
   "change-date-time" : "Изменить дату/время",
@@ -57,7 +57,7 @@
   "change-home-password" : "Изменить домашний пароль",
   "change-password" : "Изменить пароль",
   "change-password-ellipsis" : "Изменить пароль...",
-  "choose-decision" : "Пожалуйста, выберите решение...",
+  "choose-decision" : "Пожалуйста, выберите свой вариант...",
   "choose-request" : "Выберите просьбу...",
   "clear-selection" : "Отменить выбор",
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
@@ -780,6 +780,11 @@
   "sign-up" : "Регистрация",
   "size" : "Размер",
   "sorry-you-banned" : "К сожалению, вы не можете выполнить эту операцию, так как автор забанил вас.",
+  "source-format" : {
+    "html" : "HTML",
+    "markdown" : "Markdown",
+    "plain-text" : "Без форматирования"
+  },
   "spoiler" : "Спойлер",
   "spoiler-alert" : "спойлер!",
   "still-friend-blocked-user" : "Заблокированный пользователь <b>{name}</b> всё ещё ваш друг. Хотите удалить из друзей?",
