Added area-label to buttons opening a menu or selection.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -366,6 +366,7 @@
   "mark-unread" : "Mark as Unread",
   "mention" : "Mention",
   "mention-copied" : "Mention copied to the clipboard",
+  "menu" : "Menu",
   "message" : "Message",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
   "more-reactions" : "{remaining} more",
