Use "create a blog" instead of "sign up" and "log in/out" instead of "connect/disconnect".

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,7 +1,7 @@
 {
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
-  "add-connection" : "Add connection",
+  "add-connection" : "Add account",
   "add-donation" : "Add Donation",
   "add-donation-button" : "Add donation",
   "add-friend" : "Add to friends",
@@ -94,9 +94,9 @@
   "complain-status-colon" : "Complaint status:",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
-  "connect" : "Connect",
-  "connected" : "Connected",
-  "connect-home" : "Connect to Home",
+  "connect" : "Log In",
+  "connected" : "Logged in",
+  "connect-home" : "Log In",
   "connecting" : "Connecting",
   "content-hidden-in-google-play" : "All content is hidden in Android (Google Play)",
   "content-not-accessible-android" : "This content is not accessible on Android",
@@ -144,8 +144,8 @@
   "details-blocking" : "Details of blocking",
   "details-blocking-by-name" : "Details of blocking by {name}",
   "details-blocking-name" : "Details of blocking {name}",
-  "disconnect" : "Disconnect",
-  "disconnected-from-home" : "You have been disconnected from your home blog.",
+  "disconnect" : "Log Out",
+  "disconnected-from-home" : "You have been logged out.",
   "discussion-closed" : "Discussion is closed",
   "domain" : "Domain",
   "domain-already-taken" : "Domain is already taken",
@@ -340,7 +340,7 @@
     "their-post" : "{gender, select, male {his} female {her} other {their}} post",
     "your-post" : "your post"
   },
-  "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
+  "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Log in</2>",
   "italic" : "Italic",
   "i-think-blog-hide" : "I think, the blog <b>{name}</b> should be hidden.",
   "i-think-comment-hide" : "I think, the comment \"{heading}\" should be hidden.",
@@ -403,7 +403,7 @@
   "no-name-set" : "no name set",
   "no-requests-available" : "No requests available.",
   "not-allowed" : "Not allowed",
-  "not-connected-home" : "Not connected to home",
+  "not-connected-home" : "Not logged in",
   "note-complains-public" : "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text" : "(no text)",
   "not-following-comments" : "Not following comments",
@@ -457,7 +457,7 @@
     "nobody" : "Nobody",
     "only-me" : "Only me",
     "public" : "Everybody",
-    "signed" : "Signed in",
+    "signed" : "Logged in",
     "subscribed" : "Subscriptions"
   },
   "profile" : "Profile",
@@ -566,7 +566,7 @@
   "set-by-admin" : "set by admin",
   "set-by-post-owner" : "set by post author",
   "set-home-password" : "Set Home Password",
-  "set-password-and-connect" : "Set Password & Connect",
+  "set-password-and-connect" : "Set Password & Log In",
   "setting" : {
     "chapter" : {
       "comments" : "Comments",
@@ -778,7 +778,7 @@
   "signature-correct" : "Signature is correct",
   "signature-incorrect" : "Signature is incorrect",
   "signature-verification-in-progress" : "Signature verification in progress",
-  "sign-up" : "Sign Up",
+  "sign-up" : "Create a Blog",
   "size" : "Size",
   "sorry-you-banned" : "Sorry, you cannot perform this operation, because the author has banned you.",
   "source-format" : {
@@ -871,7 +871,7 @@
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
   "want-delete-draft" : "Do you really want to delete the draft?",
   "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
-  "want-disconnect" : "Do you really want to disconnect from your home blog?",
+  "want-disconnect" : "Do you really want to log out?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
