--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -1,7 +1,7 @@
 {
   "add-comment" : "Dodaj komentarz",
   "add-comments-need" : "Aby dodać komentarze, musisz się <0>{signup}</0> lub <1>{connect}</1>",
-  "add-connection" : "Dodaj połączenie",
+  "add-connection" : "Dodaj konto",
   "add-donation" : "Dodaj darowiznę",
   "add-donation-button" : "Dodaj darowiznę",
   "add-friend" : "Dodaj do znajomych",
@@ -94,9 +94,9 @@
   "complain-status-colon" : "Stan skargi",
   "compress-images" : "Kompresuj obrazy",
   "confirm-password" : "Potwierdź hasło",
-  "connect" : "Połącz",
-  "connected" : "Połączono",
-  "connect-home" : "Połącz z domem",
+  "connect" : "Zaloguj się",
+  "connected" : "Zalogowano",
+  "connect-home" : "Zaloguj się",
   "connecting" : "Łączenie",
   "content-not-accessible-android" : "Ten kontent nie jest dostępny na Androidzie",
   "continue-reading" : "Kontynuuj czytanie →",
@@ -140,8 +140,8 @@
   "details-blocking" : "Szczegóły blokowania",
   "details-blocking-by-name" : "Szczegóły blokowania przez {name}",
   "details-blocking-name" : "Szczegóły blokowania {name}",
-  "disconnect" : "Rozłącz",
-  "disconnected-from-home" : "Zostałeś rozłączony z Twoim blogiem domowym.",
+  "disconnect" : "Wyloguj",
+  "disconnected-from-home" : "Zostałeś wylogowany.",
   "discussion-closed" : "Dyskusja jest zamknięta",
   "domain" : "Domena",
   "domain-already-taken" : "Domena jest już zajęta",
@@ -329,7 +329,7 @@
     "their-post" : "{gender, select, male {jego} female {jej} other {ich}} post",
     "your-post" : "Twój post"
   },
-  "invitation-buttons" : "<0>Stwórz nowy blog</0><1>lub</1><2>Połącz się ze swoim blogiem</2>",
+  "invitation-buttons" : "<0>Utwórz nowy blog</0><1>lub</1><2>Zaloguj się</2>",
   "italic" : "Kursywa",
   "kick" : "Wyrzuć",
   "kick-ellipsis" : "Wyrzuć z dyskusji...",
@@ -388,7 +388,7 @@
   "no-name-set" : "nie ustawiono nazwy",
   "no-requests-available" : "Brak dostępnych żądań.",
   "not-allowed" : "Nie dozwolone",
-  "not-connected-home" : "Nie połączono z domem",
+  "not-connected-home" : "Nie zalogowano",
   "no-text" : "(brak tekstu)",
   "not-following-comments" : "Nie śledzi komentarzy",
   "nothing-yet" : "Jeszcze nic.",
@@ -548,7 +548,7 @@
   "set-by-admin" : "ustawione przez administratora",
   "set-by-post-owner" : "ustawione przez autora posta",
   "set-home-password" : "Ustaw hasło domowe",
-  "set-password-and-connect" : "Ustaw hasło i połącz",
+  "set-password-and-connect" : "Ustaw hasło i zaloguj się",
   "setting" : {
     "chapter" : {
       "comments" : "Komentarze",
@@ -739,7 +739,7 @@
   "signature-correct" : "Podpis jest poprawny",
   "signature-incorrect" : "Podpis jest niepoprawny",
   "signature-verification-in-progress" : "Trwa weryfikacja podpisu",
-  "sign-up" : "Zarejestruj się",
+  "sign-up" : "Utwórz blog",
   "size" : "Rozmiar",
   "spoiler" : "Spoiler",
   "spoiler-alert" : "spoiler!",
@@ -817,7 +817,7 @@
   "want-delete-addon" : "Czy na pewno chcesz usunąć dodatek \"{name}\"?",
   "want-delete-draft" : "Czy na pewno chcesz usunąć szkic?",
   "want-delete-token" : "Czy na pewno chcesz usunąć token \"{name}\"?",
-  "want-disconnect" : "Czy na pewno chcesz się odłączyć od swojego bloga domowego?",
+  "want-disconnect" : "Czy na pewno chcesz się wylogować?",
   "want-forget-changes" : "Czy na pewno chcesz zapomnieć o wszystkich zmianach?",
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
