--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1,7 +1,7 @@
 {
   "add-comment" : "Отправить",
   "add-comments-need" : "Чтобы комментировать, вам нужно <0>{signup}</0> или <1>{connect}</1>",
-  "add-connection" : "Добавить соединение",
+  "add-connection" : "Добавить аккаунт",
   "add-donation" : "Добавить донат",
   "add-donation-button" : "Добавить донат",
   "add-friend" : "Добавить в друзья",
@@ -94,9 +94,9 @@
   "complain-status-colon" : "Статус жалобы:",
   "compress-images" : "Сжимать картинки",
   "confirm-password" : "Подтверждение пароля",
-  "connect" : "Подключиться",
-  "connected" : "Подключён",
-  "connect-home" : "Подключиться к дому",
+  "connect" : "Войти",
+  "connected" : "Вход выполнен",
+  "connect-home" : "Вход",
   "connecting" : "Подключение",
   "content-hidden-in-google-play" : "Весь контент скрыт в Android (Google Play)",
   "content-not-accessible-android" : "Этот контент недоступен на Android",
@@ -144,8 +144,8 @@
   "details-blocking" : "Подробности блокировки",
   "details-blocking-by-name" : "Подробности блокировки со стороны {name}",
   "details-blocking-name" : "Подробности блокировки {name}",
-  "disconnect" : "Отключиться",
-  "disconnected-from-home" : "Вы были отключены от вашего домашнего блога.",
+  "disconnect" : "Выйти",
+  "disconnected-from-home" : "Вы вышли из своего аккаунта.",
   "discussion-closed" : "Обсуждение закрыто",
   "domain" : "Домен",
   "domain-already-taken" : "Домен уже занят",
@@ -340,7 +340,7 @@
     "their-post" : "свой пост",
     "your-post" : "ваш пост"
   },
-  "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Зайти в свой блог</2>",
+  "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Войти</2>",
   "italic" : "Курсив",
   "i-think-blog-hide" : "Я считаю, что блог <b>{name}</b> следует скрыть.",
   "i-think-comment-hide" : "Я считаю, что комментарий \"{heading}\" следует скрыть.",
@@ -403,7 +403,7 @@
   "no-name-set" : "имя не задано",
   "no-requests-available" : "Нет доступных просьб.",
   "not-allowed" : "Недопустимо",
-  "not-connected-home" : "Не подключён к дому",
+  "not-connected-home" : "Не вошли",
   "note-complains-public" : "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слежу за комментариями",
@@ -566,7 +566,7 @@
   "set-by-admin" : "установлено администратором",
   "set-by-post-owner" : "установлено автором поста",
   "set-home-password" : "Установка домашнего пароля",
-  "set-password-and-connect" : "Установить пароль и подключиться",
+  "set-password-and-connect" : "Установить пароль и войти",
   "setting" : {
     "chapter" : {
       "comments" : "Комментарии",
@@ -778,7 +778,7 @@
   "signature-correct" : "Подпись верна",
   "signature-incorrect" : "Подпись неверна",
   "signature-verification-in-progress" : "Идёт проверка подписи",
-  "sign-up" : "Регистрация",
+  "sign-up" : "Создать блог",
   "size" : "Размер",
   "sorry-you-banned" : "К сожалению, вы не можете выполнить эту операцию, так как автор забанил вас.",
   "source-format" : {
@@ -871,7 +871,7 @@
   "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
   "want-delete-draft" : "Вы действительно хотите удалить черновик?",
   "want-delete-token" : "Вы действительно хотите удалить токен \"{name}\"?",
-  "want-disconnect" : "Вы действительно хотите отключиться от вашего домашнего блога?",
+  "want-disconnect" : "Вы действительно хотите выйти?",
   "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
