--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -1,7 +1,7 @@
 {
   "add-comment" : "Відправити",
   "add-comments-need" : "Щоб коментувати, вам треба <0>{signup}</0> або <1>{connect}</1>",
-  "add-connection" : "Додати з'єднання",
+  "add-connection" : "Додати акаунт",
   "add-donation" : "Додати донат",
   "add-donation-button" : "Додати донат",
   "add-friend" : "Додати у друзі",
@@ -94,9 +94,9 @@
   "complain-status-colon" : "Статус скарги:",
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
-  "connect" : "Підключитись",
-  "connected" : "Підключений",
-  "connect-home" : "Підключитись до дому",
+  "connect" : "Увійти",
+  "connected" : "Увійшли",
+  "connect-home" : "Вхід",
   "connecting" : "Підключення",
   "content-hidden-in-google-play" : "Весь контент приховано у Android (Google Play)",
   "content-not-accessible-android" : "Цей контент недоступний на Android",
@@ -144,8 +144,8 @@
   "details-blocking" : "Подробиці блокування",
   "details-blocking-by-name" : "Подробиці блокування з боку {name}",
   "details-blocking-name" : "Подробиці блокування {name}",
-  "disconnect" : "Відключитись",
-  "disconnected-from-home" : "Ви були відключені від вашого домашнього блогу.",
+  "disconnect" : "Вийти",
+  "disconnected-from-home" : "Ви вийшли зі свого акаунта.",
   "discussion-closed" : "Обговорення закрите",
   "domain" : "Домен",
   "domain-already-taken" : "Домен вже зайнятий",
@@ -340,7 +340,7 @@
     "their-post" : "свій пост",
     "your-post" : "ваш пост"
   },
-  "invitation-buttons" : "<0>Створити новий блог</0><1>або</1><2>Увійти у свій блог</2>",
+  "invitation-buttons" : "<0>Створити новий блог</0><1>або</1><2>Увійти</2>",
   "italic" : "Курсив",
   "i-think-blog-hide" : "Я вважаю, що блог <b>{name}</b> слід приховати.",
   "i-think-comment-hide" : "Я вважаю, що коментар \"{heading}\" слід приховати.",
@@ -403,7 +403,7 @@
   "no-name-set" : "ім'я не задано",
   "no-requests-available" : "Немає доступних прохань.",
   "not-allowed" : "Неприпустимо",
-  "not-connected-home" : "Не підключений до дому",
+  "not-connected-home" : "Не увійшли",
   "note-complains-public" : "<b>Примітка:</b> Усі скарги шерифу є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слідкую за коментарями",
@@ -566,7 +566,7 @@
   "set-by-admin" : "встановлено адміністратором",
   "set-by-post-owner" : "встановлено автором поста",
   "set-home-password" : "Встановлення домашнього пароля",
-  "set-password-and-connect" : "Встановити пароль та підключитись",
+  "set-password-and-connect" : "Встановити пароль та увійти",
   "setting" : {
     "chapter" : {
       "comments" : "Коментарі",
@@ -778,7 +778,7 @@
   "signature-correct" : "Підпис вірний",
   "signature-incorrect" : "Підпис невірний",
   "signature-verification-in-progress" : "Йде перевірка підпису",
-  "sign-up" : "Реєстрація",
+  "sign-up" : "Створити блог",
   "size" : "Розмір",
   "sorry-you-banned" : "На жаль, ви не можете здійснити цю операцію, оскільки автор забанив вас.",
   "source-format" : {
@@ -871,7 +871,7 @@
   "want-delete-addon" : "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
   "want-delete-draft" : "Ви дійсно бажаєте видалити чернетку?",
   "want-delete-token" : "Ви дійсно бажаєте видалити токен \"{name}\"?",
-  "want-disconnect" : "Ви дійсно бажаєте від'єднатися від вашого домашнього блогу?",
+  "want-disconnect" : "Ви дійсно бажаєте вийти?",
   "want-forget-changes" : "Ви дійсно бажаєте забути про всі зміни?",
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
