Notify user if the blog has moved and ask to open it at the new location.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -44,6 +44,7 @@
   "blocking-node" : "Blocking {name}",
   "blocking-reason" : "Reason of blocking",
   "blocking-till" : "Blocking till",
+  "blog-moved" : "It seems that blog <b>{name}</b> has moved to the new address <b>{location}</b>. Do you want to open the blog at the new location?",
   "bold" : "Bold",
   "bottom" : "Bottom",
   "cancel" : "Cancel",
