--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -44,6 +44,7 @@
   "blocking-node" : "Блокировка {name}",
   "blocking-reason" : "Причина блокировки",
   "blocking-till" : "Блокировка до",
+  "blog-moved" : "Похоже, что блог <b>{name}</b> переехал на новый адрес <b>{location}</b>. Хотите открыть блог на новом месте?",
   "bold" : "Полужирный",
   "bottom" : "В начало",
   "cancel" : "Отмена",
