--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -44,6 +44,7 @@
   "blocking-node" : "Блокування {name}",
   "blocking-reason" : "Причина блокування",
   "blocking-till" : "Блокування до",
+  "blog-moved" : "Здається, блог <b>{name}</b> переїхав за новою адресою <b>{location}</b>. Бажаєте відкрити блог на новому місці?",
   "bold" : "Жирний",
   "bottom" : "У початок",
   "cancel" : "Відмінити",
